<resources>
    <string name="app_name">MyWeather</string>
    <string name="home">Home</string>
    <string name="check_forecast">Check Forecast</string>
    <string name="search_more_places">Search more places</string>
    <string name="search_by_zip_code_country_or_lat_lon">Search by zip code, country or lat lon</string>
    <string name="discover">Discover</string>
    <string name="return_home">Return home</string>
    <string name="latest_searchs">Latest searches</string>
    <string name="empty_text">No data found, try searching!</string>
    <string name="zip_code">Zip code</string>
    <string name="lat_long">Lat long</string>
    <string name="city">City</string>
    <string name="current_location">Current location</string>
    <string name="today_s_forecast">Today\'s forecast</string>
    <string name="forecast">Forecast</string>
</resources>