<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="com.forecast.myweather.currentweather.CurrentWeatherHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/linear_gradient">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/discover"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_temp_celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/temperature_celsius"
            android:onClick="@{()->handler.switchToFahrenheit()}"
            android:text="@string/discover"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_temp_fahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/temperature_fahrenheit__1_"
            android:onClick="@{()->handler.switchToCelsius()}"
            android:text="@string/discover"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_rounded"
            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="5dp"
            android:hint="@string/search_by_zip_code_country_or_lat_lon"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:padding="15dp"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/search">

            <RadioButton
                android:id="@+id/rb_zip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{()->handler.zipCodeSelected()}"
                android:text="@string/zip_code"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/rb_lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{()->handler.latLonSelected()}"
                android:text="@string/lat_long"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/rb_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{()->handler.citySelected()}"
                android:text="@string/city"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/rb_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{()->handler.currentLocationSelected()}"
                android:text="@string/current_location"
                android:textColor="@color/white" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/filter">

            <ImageView
                android:id="@+id/iv_sunny"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/sunny"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_tmp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="@id/iv_sunny"
                app:layout_constraintStart_toStartOf="@id/iv_sunny"
                app:layout_constraintTop_toBottomOf="@id/iv_sunny"
                tools:text="-3°F" />

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/iv_sunny"
                app:layout_constraintStart_toStartOf="@id/iv_sunny"
                app:layout_constraintTop_toBottomOf="@id/tv_tmp"
                tools:text="London" />

            <ImageView
                android:id="@+id/iv_sunny_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/sunnysmall"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_city" />

            <TextView
                android:id="@+id/tv_tmp_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_sunny_small"
                app:layout_constraintStart_toEndOf="@id/iv_sunny_small"
                app:layout_constraintTop_toTopOf="@id/iv_sunny_small"
                tools:text="Overcast clouds" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_latest_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/latest_searchs"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_weather" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_searchItems"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="12sp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/button_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_latest_search"
            tools:listitem="@layout/rv_search_item" />

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="12dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue700"
                android:padding="0dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/check_forecast"
                android:onClick="@{()->handler.navigateToForecast()}"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="7dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue700"
                android:padding="0dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/return_home"
                android:onClick="@{()->handler.navigateToHome()}"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>